<package>
  <name>cauv_scripting</name>
  <version>1.0.0</version>
  <description>CAUV scripting (bit of a god package)</description>
  <maintainer email="sleeeeep@thejungle.com">Ka</maintainer>
  <author>Cardboard Ant Upbeat Ventures</author>
  <license>CAUV</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
</package>
